lab1/Test/L1-A-4-37.cmm
float wPBoqoBYGUKEI6y ( float cSXI5wob , int [ 537742726 
  ] ) {
  float ub6GiqSIL5ogkWOe0L = ! + 693150417 = vvqSGoIK4f9QeN1Y 
    ;
  float GYbQoTtayaRArp = ! _ReqLCLaorjktabula2e / 
    p31ambL3SRyhDqBU - yY4wrBx8e4zJ4AvCY + aT == WyTlwW48 
    < c <= SHbUPKB < lafWPKrMAJLYUQ >= wtJy == piJU < 
    EFG80t9AnfPo1 != y3zcEFU43DjYvMzy == kyYaJ4ip == Ro52FOfvMt 
    < sr7dZrRnijSiPr3OIKiU > < DncJrbC8_JvQ >= dXkihcVCU8I7mY_4 
    == m1fgb2RYhx == Foq4SF && hTfVl6vMw4Nx || FCIClj 
    || ukRG || VOxCSCfqGF3LBAMcaXN , m7JbOLnLXXAzjFg [ 
    1499457586 ] [ 1298725224 ] [ 507632253 ] [ 1260301274 
    ] , pfI84Rdm8mL1PzeUO ;
  if while ( - ! woT = zJhX41kfsslz3E0pfr5 )   fTwDsfJITvM 
    ! ;
else   vgNvCw ;

{
>   }}
